--- a/leaderboard.html
+++ b/leaderboard.html
@@ -66,19 +66,6 @@
   </div>
 </div>
 
-<!-- Handle modal -->
-<div class="modal" id="handleModal" role="dialog" aria-modal="true" aria-labelledby="handleTitle">
-  <div class="inner">
-    <h3 id="handleTitle" style="margin-top:0;">Pick a handle</h3>
-    <p class="muted">Choose a name to appear on the leaderboard (3–20 letters, numbers, underscore).</p>
-    <input id="handleInput" type="text" placeholder="e.g. HistoryBuff_42" autocomplete="off" spellcheck="false">
-    <div id="handleError" class="muted" style="margin-top:8px;min-height:1.2em;"></div>
-    <div style="margin-top:12px;display:flex;gap:8px;justify-content:flex-end;">
-      <button id="cancelHandle" class="btn-ghost">Cancel</button>
-      <button id="saveHandle">Save</button>
-    </div>
-  </div>
-</div>
 
 <script type="module">
   
@@ -322,7 +309,7 @@ pickHandleBtn.addEventListener("click", promptForHandle);
   "
   type="button"
 >
-  Pick a handle ✏️
+  Change Your Handle ✏️
 </button>
 
 </body>
